# mcp-cn-commerce

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_en.md  README_zh.md  SECURITY.md  TODO.md  conftest.py  docker-compose.yml  glama.json  llms-install.md  pyproject.toml  requirements-lock.txt  server.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  platform_request.yml
.github/workflows/: auto-merge.yml  mcp-registry.yml  publish-all.yml  publish.yml  test.yml
docs/: FAQ.md  api-reference.md  api-versioning.md  async-queue.md  batch-operations.md  caching.md  cli.md  configuration.md  dashboard.md  data-export.md  docker.md  examples.md  health-check.md  i18n.md  load-balancing.md  logging.md  monitoring.md  platforms.md  pro-inquiry-playbook.md  rate-limiting.md  registry-submission.md  request-cache.md  request-encryption.md  request-priority.md  request-queue.md  request-replay.md  request-timeout.md  security-best-practices.md  template-guide.md  tracing.md  webhooks.md
docs/specs/: sdd-items-1-5.md
examples/: README.md
examples/advanced/: automation.md  data-analysis.md  multi-platform.md
examples/basic/: query-ads.md  query-orders.md  query-products.md
examples/best-practices/: error-handling.md  observability_demo.py  performance.md  security.md
scripts/: smoke_install.py
scripts/git-hooks/: pre-push
servers/doudian/: pyproject.toml  server.py
servers/doudian/src/mcp_doudian/: __init__.py  server.py
servers/doudian/tests/: test_doudian.py
servers/jd/: pyproject.toml  server.py
servers/jd/src/mcp_jd/: __init__.py  server.py
servers/jd/tests/: test_jd.py
servers/kuaishou/: pyproject.toml  server.py
servers/kuaishou/src/mcp_kuaishou/: __init__.py  server.py
servers/kuaishou/tests/: test_kuaishou.py
servers/oceanengine/: pyproject.toml  server.py
servers/oceanengine/src/mcp_oceanengine/: __init__.py  server.py
servers/oceanengine/tests/: test_oceanengine.py
servers/pinduoduo/: pyproject.toml  server.py
servers/pinduoduo/src/mcp_pinduoduo/: __init__.py  server.py
servers/pinduoduo/tests/: test_pinduoduo.py
servers/taobao/: pyproject.toml
servers/taobao/src/mcp_taobao/: __init__.py  server.py
servers/taobao/tests/: test_taobao.py
servers/weixin-store/: pyproject.toml
servers/weixin-store/src/mcp_weixin_store/: __init__.py  server.py
servers/weixin-store/tests/: test_weixin_store.py
servers/weixin_store/tests/: test_weixin_store.py
servers/xiaohongshu/: pyproject.toml
servers/xiaohongshu/src/mcp_xiaohongshu/: __init__.py  server.py
servers/xiaohongshu/tests/: test_xiaohongshu.py
shared/: __init__.py  cli.py  cn_commerce_base.py  dashboard.py  i18n.py  normalizer.py
templates/: README.md
templates/bad-review-alert/: demo-output.md  example-data.json  prompt.md
templates/cs-classify/: demo-output.md  example-data.json  prompt.md
templates/daily-report/: demo-output.md  example-data.json  output-template.md  prompt.md
templates/kol-match/: example-data.json  prompt.md
templates/product-select/: example-data.json  prompt.md
tests/: test_api_compatibility.py  test_automation.py  test_benchmark.py  test_cli.py  test_cn_commerce_base.py  test_common_tools.py  test_dashboard.py  test_i18n.py  test_integration.py  test_item3_bugfixes.py  test_normalizer.py  test_opt_in_features.py  test_performance.py  test_sdd_phase0.py
