[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-cn-commerce"
dynamic = ["version"]
description = "Chinese e-commerce platform MCP servers — let AI agents read merchant business data (Ocean Engine, Douyin Shop, JD.com, Taobao, Pinduoduo)"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "mcp-cn-commerce contributors"}]
readme = "README.md"
keywords = [
    "mcp",
    "model-context-protocol",
    "chinese-ecommerce",
    "ecommerce",
    "ai-agent",
    "agent-tool",
    "business-data",
    "ocean-engine",
    "douyin-shop",
    "jd-com",
    "taobao",
    "pinduoduo",
    "mcp-server",
    "python",
    "claude",
    "omni-channel",
    "advertising-api",
    "order-management",
    "电商",
    "MCP",
    "AI",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
urls = {Repository = "https://github.com/TonyWang-hub/mcp-cn-commerce", Issues = "https://github.com/TonyWang-hub/mcp-cn-commerce/issues", Documentation = "https://github.com/TonyWang-hub/mcp-cn-commerce#readme", Changelog = "https://github.com/TonyWang-hub/mcp-cn-commerce/blob/main/CHANGELOG.md"}
dependencies = [
    "mcp>=1.2,<2",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio", "pytest-cov", "black", "ruff"]

[project.scripts]
mcp-cn-commerce = "shared.cli:main"
mcp-cn-oceanengine = "servers.oceanengine.server:main"
mcp-cn-doudian = "servers.doudian.server:main"
mcp-cn-jd = "servers.jd.server:main"
mcp-cn-taobao = "servers.taobao.server:main"
mcp-cn-pinduoduo = "servers.pinduoduo.server:main"
mcp-cn-kuaishou = "servers.kuaishou.server:main"
mcp-cn-xiaohongshu = "servers.xiaohongshu.server:main"
mcp-cn-weixin-store = "servers.weixin_store.server:main"

[tool.setuptools.packages.find]
include = ["shared*", "servers*"]

[tool.setuptools.dynamic]
version = {attr = "shared.__version__"}

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests", "servers"]

[tool.black]
line-length = 120
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "E402"]  # Line too long - handled by black; Module level import not at top of file

# ── mypy ───────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
warn_return_any = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
check_untyped_defs = false
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
strict_optional = false
# Start lenient; tighten incrementally
disable_error_code = [
    "call-arg",
    "return-value",
    "assignment",
    "arg-type",
    "attr-defined",
    "union-attr",
    "override",
]
exclude = [
    "\\.egg-info/",
    "htmlcov/",
    "__pycache__/",
    "\\.ruff_cache/",
    "\\.mypy_cache/",
    "build/",
    "dist/",
    "docs/",
    "examples/",
]

[[tool.mypy.overrides]]
module = [
    "mcp.*",
    "mcp.server.*",
    "mcp.server.stdio",
]
ignore_missing_imports = true
# mcp library lacks proper type stubs for Server.tool decorator
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "shared.*"
ignore_missing_imports = true

# ── pylint ─────────────────────────────────────────────────
[tool.pylint.main]
py-version = "3.11"
load-plugins = []
ignore-paths = [
    "\\.egg-info/",
    "htmlcov/",
    "build/",
    "dist/",
    "docs/",
    "examples/",
]

[tool.pylint.messages_control]
disable = [
    "C0103",  # invalid-name
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "C0301",  # line-too-long (handled by black)
    "C0302",  # too-many-lines
    "C0413",  # wrong-import-position
    "C0415",  # import-outside-toplevel
    "R0902",  # too-many-instance-attributes
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-local-variables
    "R0917",  # too-many-positional-arguments
    "R0801",  # duplicate-code
    "R1732",  # consider-using-with
    "W0108",  # unnecessary-lambda
    "W0404",  # reimported
    "W0511",  # fixme
    "W0603",  # global-statement
    "W0613",  # unused-argument
    "W0621",  # redefined-outer-name
    "W0622",  # redefined-builtin
    "W0707",  # raise-missing-from
    "W0718",  # broad-exception-caught
    "W1203",  # logging-fstring-interpolation
    "W1510",  # subprocess-run-check
    "W1514",  # unspecified-encoding
    "E0401",  # import-error (handled by mypy)
    "W0212",  # protected-access
    "R0904",  # too-many-public-methods
    "R0911",  # too-many-return-statements
    "R0912",  # too-many-branches
    "R0915",  # too-many-statements
    "R1705",  # no-else-return
    "W0221",  # arguments-differ (platform _request/_sign overrides differ by design)
    "W0237",  # arguments-renamed
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.basic]
good-names = ["i", "j", "k", "v", "e", "f", "ep", "ts", "h", "fn", "df"]

[tool.pylint.typecheck]
ignored-modules = ["mcp", "mcp.server", "mcp.server.stdio"]
ignored-classes = ["Server"]

# ── bandit ─────────────────────────────────────────────────
[tool.bandit]
targets = ["servers", "shared"]
exclude_dirs = [
    "tests",
    "examples",
    "docs",
    ".egg-info",
    "htmlcov",
    "build",
    "dist",
]
skips = [
    "B101",  # assert used — we use asserts in tests
    "B311",  # random module — used for jitter in retry logic, not security
    "B324",  # hashlib md5 — used for e-commerce API signing, not security
    "B404",  # subprocess import — used in CLI
    "B601",  # paramiko calls — not used
    "B602",  # subprocess with shell=True — not used
    "B603",  # subprocess without shell=False — not used
    "B604",  # any_other_function_with_shell_equals_true
    "B607",  # start_process_with_partial_path
    "B107",  # hardcoded_password_default — empty string defaults for config
]
# Only flag high-severity issues by default
severity = "medium"
confidence = "medium"
