[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-cn-doudian"
version = "0.1.0"
description = "MCP server for 抖店 (Douyin Shop / Doudian) — read merchant business data"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Wang Zhuo"}]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.scripts]
mcp-cn-doudian = "mcp_doudian.server:main"

[tool.setuptools.packages.find]
where = ["src"]
