[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-cn-doudian"
dynamic = ["version"]
description = "MCP server for 抖店 (Douyin Shop / Doudian) — read merchant business data"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "mcp-cn-commerce contributors"}]
dependencies = [
    "mcp>=1.0,<2",
    "httpx>=0.27,<1",
    "mcp-cn-commerce>=0.1,<0.2",
]

[project.scripts]
mcp-cn-doudian = "mcp_doudian.server:main"

[tool.hatch.version]
path = "src/mcp_doudian/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_doudian"]
