[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-cn-jd"
dynamic = ["version"]
description = "JD (京东) MCP server — let AI agents read merchant business data"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "mcp-cn-commerce contributors"}]
dependencies = [
    "mcp>=1.0,<2",
    "httpx>=0.27,<1",
    "mcp-cn-commerce>=0.1,<0.2",
]

[project.scripts]
mcp-cn-jd = "mcp_jd.server:main"

[tool.hatch.version]
path = "src/mcp_jd/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_jd"]
