[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-cn-kuaishou"
dynamic = ["version"]
description = "MCP server for Kuaishou (快手) e-commerce platform"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0,<2",
    "httpx>=0.27,<1",
    "mcp-cn-commerce>=0.1,<0.2",
]

[project.scripts]
mcp-cn-kuaishou = "mcp_kuaishou.server:main"

[tool.hatch.version]
path = "src/mcp_kuaishou/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_kuaishou"]
