[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-cn-oceanengine"
version = "0.1.0"
description = "MCP server for Ocean Engine (巨量引擎) advertising platform"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.scripts]
mcp-cn-oceanengine = "mcp_oceanengine.server:main"

[tool.hatch.build.targets.wheels]
packages = ["src/mcp_oceanengine"]
