[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-cn-oceanengine"
dynamic = ["version"]
description = "MCP server for Ocean Engine (巨量引擎) advertising platform"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0,<2",
    "httpx>=0.27,<1",
    "mcp-cn-commerce>=0.1,<0.2",
]

[project.scripts]
mcp-cn-oceanengine = "mcp_oceanengine.server:main"

[tool.hatch.version]
path = "src/mcp_oceanengine/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_oceanengine"]
