[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-cn-pinduoduo"
version = "0.1.0"
description = "MCP server for Pinduoduo (拼多多) e-commerce platform"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0", "httpx>=0.27"]

[project.scripts]
mcp-cn-pinduoduo = "mcp_pinduoduo.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_pinduoduo"]
