[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-cn-taobao"
version = "0.1.0"
description = "MCP server for Taobao (淘宝) e-commerce platform"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0", "httpx>=0.27"]

[project.scripts]
mcp-cn-taobao = "mcp_taobao.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_taobao"]
