[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-cn-taobao"
dynamic = ["version"]
description = "MCP server for Taobao (淘宝) e-commerce platform"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0,<2",
    "httpx>=0.27,<1",
    "mcp-cn-commerce>=0.1,<0.2",
]

[project.scripts]
mcp-cn-taobao = "mcp_taobao.server:main"

[tool.hatch.version]
path = "src/mcp_taobao/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_taobao"]
