[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-cn-weixin-store"
version = "0.1.0"
description = "MCP server for WeChat Store (微信小店) e-commerce platform"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0", "httpx>=0.27"]

[project.scripts]
mcp-cn-weixin-store = "mcp_weixin_store.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_weixin_store"]
