[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-cn-weixin-store"
dynamic = ["version"]
description = "MCP server for WeChat Store (微信小店) e-commerce platform"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0,<2",
    "httpx>=0.27,<1",
    "mcp-cn-commerce>=0.1,<0.2",
]

[project.scripts]
mcp-cn-weixin-store = "mcp_weixin_store.server:main"

[tool.hatch.version]
path = "src/mcp_weixin_store/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_weixin_store"]
