[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-cn-xiaohongshu"
dynamic = ["version"]
description = "MCP server for Xiaohongshu (小红书) e-commerce platform"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0,<2",
    "httpx>=0.27,<1",
    "mcp-cn-commerce>=0.1,<0.2",
]

[project.scripts]
mcp-cn-xiaohongshu = "mcp_xiaohongshu.server:main"

[tool.hatch.version]
path = "src/mcp_xiaohongshu/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_xiaohongshu"]
